--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Log in | Sign up</title>
+  <title> kire kire ! </title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,26 +10,8 @@
     <link rel="icon" type="image/x-icon" href="icon.jpeg">
 </head>
 <body>
-    <div class="box">
-        <div class="form">
-          <h2> Log in</h2>
-          <div class="inputBox">
-            <input type="text" required="required">
-            <span>Username</span>
-            <i></i>
-          </div>
-          <div class="inputBox">
-            <input type="password" required="requird">
-            <span>Password</span>
-            <i></i>
-          </div>
-          <div class="links">
-            <a href="forgot password.html"> Forgot Password</a>
-            <a href="signin.html"> Sign in</a>
-          </div>
-          <input type="submit" value="Log in">
-        </div>
-    </div>
+   <h1 class="title">This page is in under construction 🙃 </h1>
+      <h2>--Mahfuz :)</h2>
 
 </body>
 </html>
