--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="">
     <link rel="icon" type="image/x-icon" href="icon.jpeg">
 </head>
-<body>
-   <h1 class="title">This page is in under construction 🙃 </h1>
-      <h2>--Mahfuz :)</h2>
-
+<body style="background-color: lightblue;">
+   <h1 class="title"> !!This page is in under construction!! 🙃 </h1> <br>
+    
+  you have to wait untill I develop this page 😁  <br>
+ <h2>--Mahfuz :)</h2>
 </body>
 </html>
