--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body style="background-color: lightblue;">
    <h1 class="title"> !!This page is in under construction!! 🙃 </h1> <br>
     
-  you have to wait untill I develop this page 😁  <br>
+  you have to wait till I develop this page 😁  <br>
  <h2>--Mahfuz :)</h2>
 </body>
 </html>
