--- a/index.html
+++ b/index.html
@@ -1,18 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title> kire kire ! </title>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="">
-    <link rel="icon" type="image/x-icon" href="icon.jpeg">
+  <meta charset="UTF-8">
+  <title> Kire kire!</title>
+  <link rel="icon" type="image/x-icon" href="icon.jpeg">
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      height: 100%;
+      background: black;
+      font-family: 'Courier New', Courier, monospace;
+    }
+
+    canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 0;
+    }
+
+    #container {
+      position: absolute;
+      top: 20%;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 1;
+    }
+
+    .typewriter {
+      font-size: 2rem;
+      font-weight: bold;
+      background: linear-gradient(90deg, #00ffe0, #ff00cc);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      white-space: nowrap;
+      overflow: hidden;
+      border-right: 3px solid #fff;
+      width: 0;
+      animation: typing 2s steps(40, end), blink 0.7s step-end infinite alternate;
+    }
+
+    @keyframes typing {
+      from { width: 0; }
+      to { width: 100%; }
+    }
+
+    @keyframes blink {
+      from { border-color: transparent; }
+      to { border-color: white; }
+    }
+  </style>
 </head>
-<body style="background-color: lightblue;">
-   <h1 class="title"> !!This page is in under construction!! 🙃 </h1> <br>
-    
-  you have to wait till I develop this page 😁  <br>
- <h2>--Mahfuz :)</h2>
+<body>
+
+<canvas id="matrix"></canvas>
+<div id="container"></div>
+
+<script>
+  const phrases = [
+    "Hello there!",
+    "This site is under construction.",
+    "You have to wait till I develop this site.",
+    "--Mahfuz:)"
+  ];
+
+  const container = document.getElementById("container");
+  let index = 0;
+
+  function showNextPhrase() {
+    container.innerHTML = '';
+    const el = document.createElement('div');
+    el.className = 'typewriter';
+    el.style.width = phrases[index].length + 'ch';
+    el.textContent = phrases[index];
+    container.appendChild(el);
+
+    index = (index + 1) % phrases.length;
+
+    setTimeout(showNextPhrase, 5000); // 2s typing + 3s pause
+  }
+
+  showNextPhrase();
+
+  // Matrix background logic
+  const canvas = document.getElementById("matrix");
+  const ctx = canvas.getContext("2d");
+
+  canvas.height = window.innerHeight;
+  canvas.width = window.innerWidth;
+
+  const binary = "01";
+  const fontSize = 16;
+  const columns = canvas.width / fontSize;
+  const drops = Array(Math.floor(columns)).fill(1);
+
+  function drawMatrix() {
+    ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
+    ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+    ctx.fillStyle = "#0F0";
+    ctx.font = fontSize + "px monospace";
+
+    for (let i = 0; i < drops.length; i++) {
+      const text = binary[Math.floor(Math.random() * binary.length)];
+      ctx.fillText(text, i * fontSize, drops[i] * fontSize);
+
+      if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
+        drops[i] = 0;
+      }
+
+      drops[i]++;
+    }
+  }
+
+  setInterval(drawMatrix, 50);
+
+  window.addEventListener('resize', () => {
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+  });
+</script>
+
 </body>
 </html>
